--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="Pt">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>botecouuuu</title>
+    <title>Boteco</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
