mudanças login ione

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/5bcbdb3503.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <img src="/src/assets/imgs/icons8-nova-mensagem-24.png" alt="" />
   </body>
 </html>
